sumo/tests/jtrrouter/errors/network/edge/root__edge#to__empty1/errors.jtrrouter
Error: Attribute 'to' in definition of edge '1' is empty.
Error: An unknown edge occured (id='1').
Quitting (on error).
